--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,10 @@ button {
     border: none;
 }
 
-img {
-    width: 100%;
-    display: block;
-}
 
 .header {
-    margin: 4rem 2rem 2rem 1rem;
+    margin: 40px 20px 20px 0;
+    font-size: 0;
 }
 
 .header >* {
@@ -57,9 +54,18 @@ li {
     font-weight: 500;
 }
 
+.navbar ul {
+    padding: 0;
+}
+
 .acciones {
     width: 15%;
     text-align: right;
     font-size: 1.4rem;
     font-weight: 600;
+}
+
+.main {
+    margin-top: 140px;
+    text-align: center;
 }
