--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ li {
 
 .navbar {
     width: 70%;
-    text-align: center;
+    text-align: left;
     color: #025157;
     font-weight: 500;
 }
@@ -60,7 +60,7 @@ li {
 
 .acciones {
     width: 15%;
-    text-align: right;
+    text-align: left;
     font-size: 1.4rem;
     font-weight: 600;
 }
