--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #fffbf7;
     text-align: center;
+    font-family: 'Fascinate Inline', cursive;
 }
 
 h1 {
@@ -54,7 +55,6 @@ li {
     text-align: left;
     color: #025157;
     font-weight: 500;
-    font-family: sans-serif;
 }
 
 .navbar ul {
