--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fffbf7;
+    background-color: #cceebc;
     text-align: center;
     font-family: 'Fascinate Inline', cursive;
 }
