--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ button {
     left: 0;
     right: 0;
     background-color: #fffbf7;
+    z-index: 999;
 }
 
 .header {
@@ -121,6 +122,11 @@ li {
 
 .parrafo {
     color: #343434;
+}
+
+.features {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .marcas {
