--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,8 @@ li {
 
 .features {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    height: 660px
 }
 
 .marcas {
