--- a/css/style.css
+++ b/css/style.css
@@ -126,9 +126,11 @@ li {
 
 .features {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template: repeat(2, 1fr) / repeat(2,1fr);
     height: 660px
 }
+
+
 
 .marcas {
     background-color: #a1d683;
