--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,12 @@ button {
 }
 
 @media (max-width:468px) {
-    .header {
+    .header > .navbar,.acciones {
         display: none;
+    }
+
+    .imagen {
+        width: 50%;
     }
 }
 
@@ -115,6 +119,10 @@ li {
 }
 
 @media (max-width:468px) {
+    .main {
+        margin-top: 100px;
+    }
+    
     .main h1 {
         font-size: 30px;
     }
