--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,10 @@ li {
     }
 }
 
+.banner img{
+    width: 100%;
+}
+
 .promo {
     display: flex;
     width: 70%;
@@ -149,6 +153,16 @@ li {
 
 .parrafo {
     color: #343434;
+}
+
+@media (max-width:468px) {
+    .promo {
+        flex-direction: column;
+    }
+
+    .promo .video {
+        max-width: 90%;
+    }
 }
 
 .features {
