--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ li {
         flex-direction: column;
     }
 
-    .promo .video {
+    .promo video {
         max-width: 90%;
     }
 }
@@ -216,6 +216,13 @@ li {
     position: absolute;
     right: -45px;
     top: 8%;
+}
+
+@media (max-width:468px) {
+    .features {
+        grid-template: repeat(1, 1fr) / repeat(1,1fr);
+        height: auto;
+    }
 }
 
 .marcas {
