--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,36 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+h1 {
+    animation: vibrar 0.3s linear infinite both;
+}
+
+@keyframes vibrar {
+    0% {
+        transform: translate(0);
+    }
+
+    20% {
+        transform: translate(-2px,2px);
+    }
+
+    40% {
+        transform: translate(-2px,-2px);
+    }
+
+    60% {
+        transform: translate(2px,2px);
+    }
+
+    80% {
+        transform: translate(2px,-2px);
+    }
+
+    100% {
+        transform: translate(0);
+    }
+}
+
 .titulo {
     color: #025157;
 }
@@ -104,6 +134,10 @@ li {
     background-color: #67b54b;
     padding: 12px 14px;
     border-radius: 5px;
+}
+
+.texto-boton:hover {
+    background-color: #67b54b;
 }
 
 .main {
