--- a/css/style.css
+++ b/css/style.css
@@ -48,14 +48,28 @@ h1 {
 }
 
 button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     background-color: #025157;
+    padding: 12px;
     color: #fff;
     border: none;
-    padding: 12px;
+    width: 6rem;
+    height: 3rem;
     border-radius: 8px;
-    margin-bottom: 20px;
     font-weight: bold;
     cursor: pointer;
+    transition: 0.3s ease all;
+    position: relative;
+    overflow: hidden;
+    padding: 0;
+}
+
+button span {
+    position: relative;
+    z-index: 2;
+    transition: 0.3s ease all;
 }
 
 .fixed-header {
@@ -134,10 +148,6 @@ li {
     background-color: #67b54b;
     padding: 12px 14px;
     border-radius: 5px;
-}
-
-.texto-boton:hover {
-    background-color: #67b54b;
 }
 
 .main {
